//
//  MovieQuizUITests.swift
//  MovieQuizUITests
//
//  Created by Konstantin Penzin on 07.05.2023.
//

import XCTest

final class MovieQuizUITests: XCTestCase {
    
    private var app: XCUIApplication!

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.
        app = XCUIApplication()
        app.launch()

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        app.terminate()
        app = nil
    }

    func testYesButton() {
        sleep(3)
        
        let firstPoster = app.images["Poster"]
        let firstPosterData = firstPoster.screenshot().pngRepresentation
        
        app.buttons["Yes"].tap()
        sleep(3)
        
        let secondPoster = app.images["Poster"]
        let secondPosterData = secondPoster.screenshot().pngRepresentation
        
        let indexLabel = app.staticTexts["Index"]
        
        XCTAssertNotEqual(firstPosterData, secondPosterData)
        XCTAssertEqual(indexLabel.label, "2/10")
    }
    
    func testNoButton() {
        sleep(3)
        
        let firstPoster = app.images["Poster"]
        let firstPosterData = firstPoster.screenshot().pngRepresentation
        
        app.buttons["No"].tap()
        sleep(3)
        
        let secondPoster = app.images["Poster"]
        let secondPosterData = secondPoster.screenshot().pngRepresentation
        
        let indexLabel = app.staticTexts["Index"]
        
        XCTAssertNotEqual(firstPosterData, secondPosterData)
        XCTAssertEqual(indexLabel.label, "2/10")
    }
    
    func testFinish() {
        passQuizToTheEnd(with: "Yes")
        
        let alert = app.alerts["QuizAlert"]
        
        if alert.waitForExistence(timeout: 2) {
            XCTAssertEqual(alert.label, "Этот раунд окончен!")
            XCTAssertEqual(alert.buttons.firstMatch.label, "Сыграть ещё раз")
        } else {
            XCTFail("Failed")
        }
        
        
    }
    
    func testGameRestart() {
        passQuizToTheEnd(with: "No")
        
        let alert = app.alerts["QuizAlert"]
        alert.buttons.firstMatch.tap()
        
        sleep(2)
        
        let indexLabel = app.staticTexts["Index"]
        
        XCTAssertFalse(alert.exists)
        XCTAssertEqual(indexLabel.label, "1/10")
    }
    
    private func passQuizToTheEnd(with answer: String) {
        for _ in 1...10 {
            sleep(2)
            app.buttons[answer].tap()
        }
    }
}
